0.X
*Arch packages
*Improved UX
-Moved to classes 
-Moved to python 3

0.4
*Fix tests
*Autostart user unit on login

0.3
*Full dnf/rpm install with hooks

0.2
*Client with autocompletion


0.1 
*Integration with taskwarrior
*Integration with timewarrior tracking every second (see https://github.com/liloman/warriors)
*moved to python
*dbus
*testing