@@ -16,6 +16,12 @@ keywords =
     habit-tracking
 license = GPLv3
 classifiers =
+    Intended Audience :: End Users/Desktop
+    Environment :: X11 Applications :: GTK
+    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
+    Operating System :: POSIX :: Linux
     Development Status :: 4 - Beta
+    Environment :: Console
+    Topic :: Utilities
 
