@@ -1,8 +1,9 @@
 0.X
 *Arch packages
 *Improved UX
--Moved to classes 
--Moved to python 3
+*Moved to classes 
+*Moved to python 3
+-Use setup.py
 
 0.4
 *Fix tests
